gobmkida/c2/dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2229:7: error: use of undeclared identifier 'dragon_escape_mx_initialized'; did you mean 'dragon2_initialized'?
if ( !dragon_escape_mx_initialized ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      dragon2_initialized
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:70:12: note: 'dragon2_initialized' declared here
static int dragon2_initialized;
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2231:38: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
memset( dragon_escape_mx, 0, sizeof( dragon_escape_mx)); 
                                     ^~~~~~~~~~~~~~~~
                                     dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2231:9: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
memset( dragon_escape_mx, 0, sizeof( dragon_escape_mx)); 
        ^~~~~~~~~~~~~~~~
        dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2232:1: error: use of undeclared identifier 'dragon_escape_mx_initialized'
dragon_escape_mx_initialized = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2241:1: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
dragon_escape_mx[i] = 1; 
^~~~~~~~~~~~~~~~
dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2241:1: error: subscript of pointer to function type 'int (char *, int, char *)'
dragon_escape_mx[i] = 1; 
^~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2281:19: error: use of undeclared identifier 'dword_9959D0'
if ( v14 != 3 && !dword_9959D0[( _QWORD)v13] ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2294:1: error: use of undeclared identifier 'dword_9959D0'
dword_9959D0[( _QWORD)v13] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2297:25: error: use of undeclared identifier 'byte_9B389F'
v16 = ( unsigned __int8)byte_9B389F[( _QWORD)v13]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2304:30: error: use of undeclared identifier 'byte_9B389E'
&& ( v28 = ( unsigned __int8)byte_9B389E[( _QWORD)v13], v28 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2314:25: error: use of undeclared identifier 'byte_9B388C'
v18 = ( unsigned __int8)byte_9B388C[( _QWORD)v13]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2323:30: error: use of undeclared identifier 'byte_9B388D'
&& ( v32 = ( unsigned __int8)byte_9B388D[( _QWORD)v13], v32 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2332:19: error: use of undeclared identifier 'dword_995984'
if ( v20 != 3 && !dword_995984[( _QWORD)v13] ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2336:30: error: use of undeclared identifier 'byte_9B388D'
&& ( v33 = ( unsigned __int8)byte_9B388D[( _QWORD)v13], v33 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2345:1: error: use of undeclared identifier 'dword_995984'
dword_995984[( _QWORD)v13] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2361:23: error: use of undeclared identifier 'dword_9959D4'
if ( !( _BYTE)v14 && !dword_9959D4[( _QWORD)v13] ) 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2373:1: error: use of undeclared identifier 'dword_9959D4'
dword_9959D4[( _QWORD)v13] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2403:30: error: use of undeclared identifier 'byte_9B388E'
&& ( v49 = ( unsigned __int8)byte_9B388E[( _QWORD)v13], v49 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2416:7: error: use of undeclared identifier 'dword_9959CC'
if ( !dword_9959CC[( _QWORD)v13] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2428:1: error: use of undeclared identifier 'dword_9959CC'
dword_9959CC[( _QWORD)v13] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2453:6: error: use of undeclared identifier 'dragon_escape_mx'
if ( dragon_escape_mx[v51] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2460:1: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
dragon_escape_mx[v51] = 0; 
^~~~~~~~~~~~~~~~
dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/engine/dragon.c:2460:1: error: subscript of pointer to function type 'int (char *, int, char *)'
dragon_escape_mx[v51] = 0; 
^~~~~~~~~~~~~~~~
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dragon_escape/src/obj/1/dragon.o] Error 1
